--- a/src/template/index.html
+++ b/src/template/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="css/styles.min.css">
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles.min.css">
 </head>
 
 <body>
-	//= include/header.html
-	<!-- body -->
-	//= include/footer.html
+  //= include/header.html
+  <!-- body -->
+  //= include/footer.html
 </body>
 
 </html>
