--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -2,4 +2,4 @@
 @import 'partial/global/fonts';
 @import 'partial/global/variable';
 @import 'partial/global/mixins';
-@import 'partial/blocks/heade';
+@import 'partial/blocks/header';
