--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -3,3 +3,4 @@
 @import 'partial/global/variable';
 @import 'partial/global/mixins';
 @import 'partial/blocks/header';
+@import '../../node_modules/slick-carousel/slick/slick.scss';
