--- a/src/template/index.html
+++ b/src/template/index.html
@@ -12,6 +12,7 @@
   //= include/header.html
   <!-- body -->
   //= include/footer.html
+  <script src="js/app.min.js"></script>
 </body>
 
 </html>
