--- a/src/css/partial/global/mixins.scss
+++ b/src/css/partial/global/mixins.scss
@@ -1,4 +1,5 @@
 $text-color: #000000;
+
 @mixin font($font-size: 16px, $line-height: 24px, $font-weight: 400, $color: $text-color) {
   font-size: $font-size;
   line-height: $line-height;
@@ -22,12 +23,20 @@ $text-color: #000000;
 }
 
 %container {
-  width: 1200px;
+  width: 1280px;
   margin: 0 auto;
+
   @media #{$tablet-widths} {
     width: 768px;
   }
+
   @media #{$mobile-widths} {
     width: 320px;
   }
+}
+
+%grid-padding {
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
 }
